# Lite-Bikes

./: README.md
fp-new/: CMakeLists.txt  PROPOSAL.md
fp-new/src/: arena.cxx  arena.hxx  bike.cxx  bike.hxx  controller.cxx  controller.hxx  main.cxx  model.cxx  model.hxx  view.cxx  view.hxx
fp-new/test/: model_test.cxx
